changes to Provisional member

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -418,7 +418,11 @@ Five types of members are defined here.
 
 \item {\bf Student Member:} A graduate student working with a Senior Member at their institution can be designated as a Student Member by that Senior Member.  We do not anticipate granting membership to students who are not supervised by a Senior Member.
 
-\item {\bf Provisional Member:}  A Provisional Member is a potential senior member who has not yet been approved for senior member status.  This is intended to be a temporary status allowing the member to demonstrate constructive engagement with the Collaboration at a level that qualifies them for Senior Membership.
+\item {\bf Provisional Member:}  A provisional member is a someone who has not yet been approved for regular
+(Senior, Postdoctoral or Student) member status.  This status applies to all new Student and Postdoctoral members
+(including, for example, in an existing Senior Member's group).  It also applies to potential Senior Members whose membership
+application has been approved.  This is intended to be a temporary status, typically a year, allowing the member to demonstrate
+sufficient constructive engagement with the Collaboration.
 
 \item {\bf Legacy Member:}  A Legacy Member is a former member who contributed in a key manner to the Project or analysis infrastructure, but is no longer engaged with the Collaboration and is therefore no longer a member.  This status is intended to convey authorship rights to such former members, and to bypass the normal membership procedures should they wish to re-engage with the Collaboration.
 
