changes to membership expectations section

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -424,7 +424,9 @@ Five types of members are defined here.
 application has been approved.  This is intended to be a temporary status, typically a year, allowing the member to demonstrate
 sufficient constructive engagement with the Collaboration.
 
+\textcolor{red}{
 \item {\bf Legacy Member:}  A Legacy Member is a former member who contributed in a key manner to the Project or analysis infrastructure, but is no longer engaged with the Collaboration and is therefore no longer a member.  This status is intended to convey authorship rights to such former members, and to bypass the normal membership procedures should they wish to re-engage with the Collaboration.
+}
 
 \end{itemize}
 
@@ -449,7 +451,8 @@ Herein, ``Members'' refers to Senior, Postdoctoral, Student and Provisional Memb
 \subsection{Membership Requirements}
 
  Members must commit effort to approved infrastructure tasks.   
-The Membership Committee will work with the \exec\ to define and recommend infrastructure tasks that need filling.  
+The Membership Committee will work with the \exec\ to define and recommend infrastructure tasks that need filling, 
+\textcolor{blue}{ and to define and communicate with members the level of expected effort.}
 Tasks can include,  for example, designing, building, and testing software, hardware, or simulations; contributing to commissioning and observations; and management tasks. 
 Just as for the hardware, we anticipate having a collaboration-wide architecture for the software.  Thus, members will be expected to comply with interface, documentation and code review requirements in support of the goals of the Collaboration.   Other ways of contributing include taking on roles in the governance, including membership on the GB, EVC, ET, or the Councils and Committees described in \S\ref{sec:councils}.
 
