Revision of publication section after argonne day 1

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -528,8 +528,15 @@ The Publication Policy will apply to all projects and publications that employ C
 engineering designs, and analysis pipelines. All Collaboration members agree to the publication policy upon joining, and to be bound by it for two years after leaving the Collaboration.
 %All Collaboration members agree to the publication policy upon joining, and if they leave the Collaboration, they are bound by it for two years afterward.
 
+{\color{red} 
+The Publication and Speakers Committee will continue to refine the policy, and present a revision one year after the establishment of the collaboration for ratification by the voting members.
+}
+
 \subsection{Organization}
-The execution of the policy shall be overseen by the Publication and Speakers Committee and its sub-committees (\S\ref{sec:pubcouncil}). The Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Committee will keep track of active Collaboration members and Legacy Members for the purposes of establishing author lists for papers.
+The execution of the policy shall be overseen by the Publication and Speakers Committee and its sub-committees (\S\ref{sec:pubcouncil}). 
+{\color{red} The Science Council approves all projects that lead to publications.  The Science Council in addition establishes the slate of projects that advance the Collaboration's key science goals and it solicits the Working Groups for detailed proposals for carrying out these projects.  This is done in consultation with the ET and in accordance with the Spokepersons' yearly plan.}
+The Spokespersons will help to navigate and resolve potential conflicts.
+The Membership Committee will keep track of active Collaboration members and Legacy Members for the purposes of establishing author lists for papers.
 
 %The execution of the policy shall be overseen by a Publication and Speakers Committee.  There are two sub-committees: the Publications Board with eight Collaboration members and the Speakers Bureau with four Collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. The Collaboration Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Committee will keep track of active Collaboration members and legacy member for the purposes of establishing author lists for papers.
 
@@ -565,7 +572,12 @@ For the purposes of authorship, ``Active Members'' consist of Senior, Postdoctor
 
 
 \begin{enumerate}
-\item For Key Project papers, all Active Members of the Collaboration and all Legacy Members will automatically be placed on the author list.  The author list will start with ``The CMB-S4 Collaboration'' and otherwise be alphabetical, unless the Publication Board agrees that the paper should be submitted to a journal which requires the first author to be an individual.  In that case, the author list will be alphabetical.   The project team will designate a small number of corresponding authors to signify those most involved with the work.  The Membership Board will provide the current list of eligible Active and Legacy Members to the Publication Board.  Anyone who chooses to opt out of authorship for a given Key Project paper must  notify the Publication Board.  
+\item For Key Project papers, all Active Members of the Collaboration and all Legacy Members will automatically be placed on the author list.  The author list will start with ``The CMB-S4 Collaboration'' and otherwise be alphabetical, unless the Publication Board agrees that the paper should be submitted to a journal which requires the first author to be an individual.  In that case, the author list will be alphabetical.
+  {\color{red}\sout{The project team will designate a small number of corresponding authors to signify those most involved with the work.}}
+  The Membership Board will provide the current list of eligible Active and Legacy Members to the Publication Board.
+  {\color{red}
+    \sout{Anyone who chooses to opt out of authorship for a given Key Project paper must  notify the Publication Board.}
+    In an email notification, these authors will be encouraged to confirm their authorship online.}
 \item For non-key project papers, the author list will be two-tiered.
 %  The first tier will typically consist of untenured (or equivalent) members of the project team, ordered according to their preference.  (The publication panel can allow exceptions for senior scientists in the first tier in rare cases when justified by their contribution.)
   Project teams may organize the first author tier as appropriate for the paper, and although not required, conventionally the tenured members of the project team will appear in the second, alphabetical tier of authors.
@@ -622,11 +634,20 @@ The role of the Speakers Bureau is to help Collaboration members give more and b
 \item Address overlap from multiple requests to give talks on the same subject at the same conference, ideally by suggesting focus changes to make them on different topics. Talk prioritization will be at the committee's best judgment, but should reflect contributions to the topic in question, career status, whether the speaker was invited, and other similar factors.
 \end{itemize}
 
-To give a talk, whether contributed to a conference/workshop or invited,  a Collaboration member must notify the Speakers Bureau. This ensures that the Speakers Bureau has a chance to address overlapping talk request or, in the case of declined invitations, can locate another appropriate speaker.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The policy does not apply to talks on other subjects that contain brief advertisements for CMB-S4, to invited presentations that must remain confidential for programmatic reasons (e.g.~certain agency reviews or presentations to private foundations or donors), or to informal presentation at Collaboration members' home institutions.  
 
-All talks must maintain confidentiality for the project. For all talks except those exempted in above, Collaboration members must send abstracts and titles to the Collaboration at least three days prior to submission, or as soon as possible in the event of last-minute invitations. Slides must be sent to the Collaboration at least one week before being presented and should include ``for the CMB-S4 Collaboration" on the title slide.
+{\color{red}
+To give a talk, a Collaboration member must notify the Speakers Bureau. This ensures that the Speakers Bureau has a chance to address overlapping talk requests or locate another appropriate speaker in the case of declined invitations.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The Speakers Bureau need not be informed of talks on other subjects that contain brief advertisements for CMB-S4 or of invited presentations that must remain confidential for programmatic reasons (e.g.~certain agency reviews or presentations to private foundations or donors).
 
-Unpublished results shown in talks, including those talks exempted in above but not including thesis defenses, must be approved for public release by the Collaboration before being shown. Such results should be marked ``CMB-S4 PRELIMINARY" on slides until publication.  Final public oral presentations for thesis student are not bound by the speakers policy and may show unreleased data, but must maintain confidentiality of major results.
+%Final public oral presentations for thesis student have greater flexibility and may show unreleased data, but it is the responsibility of the student and advisor to maintain confidentiality of results.
+
+Collaboration members must send abstracts and titles to the Speakers Bureau at least three days prior to submission, or as soon as possible in the event of last-minute invitations. Slides must be sent to the Collaboration at least one week before being presented and should include ``for the CMB-S4 Collaboration" on the title slide.
+
+All talks must maintain confidentiality for the project's results.
+Any unpublished results shown in talks must be approved for public release by the Science Council before being shown. Such results should be marked ``CMB-S4 PRELIMINARY'' on slides until publication.
+Talks showing only pre-approved results do not require separate approval from the collaboration, but the Speakers Bureau should be informed about the talk.
+
+}
+
 
 The Speakers Bureau will maintain records of all presentations given in the name of the Collaboration, and serve as a clearinghouse for talk invitations forwarded from any member.  
 
