pub committee text adjusts

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -374,7 +374,7 @@ The duties of the MC  are to review and evaluate membership applications, review
 
 \subsection{Publication and Speakers  Committee}
 \label{sec:pubcouncil}
-The Publication and Speakers Committee (PSC) consists of thirteen people including a Chair. The Chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. There are two sub-committees which together comprise the PSC: the Publications Board with eight Collaboration Members and the Speakers Bureau with four Collaboration Members. These twelve Members are appointed by the \shorte\ with the same term limits.  Roughly half of each group should be pre-tenure. If a PSC Member leaves before their term is complete, the \shorte\ will appoint a replacement to finish out their term.  PSC members can be removed by a supermajority of the GB at any time.  
+The Publication and Speakers Committee (PSC) consists of thirteen people including a Chair. The Chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. There are two sub-committees which together comprise the PSC: the Publications Board with eight Collaboration Members and the Speakers Bureau with four Collaboration Members. \textcolor{red}{The Chair of the PSC chairs both of the subcommittees.} \textcolor{red}{The twelve non-elected committee members are appointed by the \shorte\ following approval of the slate of proposed members by the Governing Board.} The twelve appointed members serve with the same term limits as the elected Chair.  Roughly half of each group should be pre-tenure. If a PSC Member leaves before their term is complete, the \shorte\ will appoint\textcolor{red}{---with Governing Board Approval---}a replacement to finish out their term.  PSC members can be removed by a supermajority of the GB at any time.  
  
 
 
