Membership Committee update

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -364,7 +364,7 @@ We anticipate the role of and/or the need for the Technical Council will be read
 
 \subsection{Membership Committee}
 
-The Membership Committee (MC) consists of seven people including a Chair. The Chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. The six remaining Members are appointed by the \shorte\ with the same term limits. If a MC Member leaves before their term is complete, the \shorte\ will appoint a replacement to finish out their term.  MC Members can be removed by a supermajority of the GB at any time.  
+The Membership Committee (MC) consists of seven people including a Chair. The Chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. \textcolor{red}{The six remaining members are appointed by the \shorte\ following approval of the slate of proposed members by the Governing Board.  These members have the same term limits as the elected chair.} If a MC Member leaves before their term is complete, the \shorte\ will appoint\textcolor{red}{---with Governing Board approval---} a replacement to finish out their term.  MC Members can be removed by a supermajority of the GB at any time.  
 
 
 The appointed Members of the MC should represent the overall Collaboration, and there should be at least two Members from the Technical Working Groups and two Members from the Analysis Working Groups on the MC.  This balance may be amended as the scientific needs of the Collaboration evolve. % \Comment{This leaves two spots to encompass people who might not fall neatly into either group.}
