more small edits

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -43,7 +43,7 @@
 %\section{Collaboration Governance Objectives/Preamble}
 \section{Preamble}
 
-The purpose of the CMB-S4 Science Collaboration (hereafter the Collaboration) is to conduct a  science program centered on the future Stage-4 ground-based cosmic microwave background (CMB) experiment, CMB-S4. The Collaboration activities include advocating for, and advancing the design of, CMB-S4. The Collaboration is expected to play a major role in the establishment of the CMB-S4 Construction Project (hereafter the Project) and in its operations, and the Collaboration is expected to lead the scientific analysis. 
+The purpose of the CMB-S4 Science Collaboration (hereafter the Collaboration) is to conduct a science program centered on the future Stage-4 ground-based cosmic microwave background (CMB) experiment, CMB-S4. The Collaboration activities include advocating for, and advancing the design of, CMB-S4. The Collaboration is expected to play a major role in the establishment of the CMB-S4 Construction Project (hereafter the Project) and in its operations, and the Collaboration is expected to lead the scientific analysis. 
 %construction and operation of the future Stage-4 %experiment that is intended to be the definitive 
 CMB-S4 will deliver a highly constraining data set with which any model for the origin of the primordial fluctuations---be it inflation or an alternative theory---and their evolution to the structure seen in the Universe today must be consistent. 
 This document outlines the Collaboration governance and organization of scientific activities.
@@ -74,7 +74,7 @@ The CMB-S4 Construction Project (the Project) is distinct from the CMB-S4 Scienc
 \vskip 12pt
 
 
-Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of  the motion.   A ``majority vote" requires that more than half the votes received are in favor of the motion.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" Members of a governance body are those whose membership is owing to their roles elsewhere in the Collaboration.  For example, the Science Council Chairs (\S\ref{sec:SC}) are ex officio Members of the Executive Team (\S\ref{sec:exec}).  In these bylaws,  ``Working Groups" are open to all Collaboration Members, and ``Councils" have multiple Working Groups reporting to them, while ``Committees" do not.  
+Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of  the motion. \textcolor{red}{``Supermajority votes'' require approval by two-thirds of the entire voting body.} A ``majority vote" requires that more than half the votes received are in favor of the motion.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" Members of a governance body are those whose membership is owing to their roles elsewhere in the Collaboration.  For example, the Science Council Chairs (\S\ref{sec:SC}) are ex officio Members of the Executive Team (\S\ref{sec:exec}).  In these bylaws,  ``Working Groups" are open to all Collaboration Members, and ``Councils" have multiple Working Groups reporting to them, while ``Committees" do not.  
 
  %The presence of a simple majority of a body's members constitutes quorum for a meeting, and two-thirds of a body must be present for a vote to be valid.
 
@@ -160,7 +160,7 @@ The secretary of the GB is chosen informally by the GB Chair to serve during the
 
 
 \subsection{Governing Board Meetings}
-The first Governing Board will establish rules for its meetings after electing its Chair. This first meeting will be held no later than two months after the selection of the board.  Agendas for scheduled meetings will be available to the full Collaboration in advance.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every Collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request of another GB Member. The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB Chair can invite other observers at their discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB Members must cast votes directly or through proxies (including abstentions) for a vote to be valid.  
+The first Governing Board will establish rules for its meetings after electing its Chair. This first meeting will be held no later than two months after the selection of the board.  Agendas for scheduled meetings will be available to the full Collaboration in advance.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. \textcolor{red}{Such meetings will occur approximately twice per year in closed session at every Collaboration meeting and additional meetings will be held by telephone or video conference.} Special meetings can be called on the initiative of the GB chair or at the request of another GB Member. The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB Chair can invite other observers at their discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB Members must cast votes directly or through proxies (including abstentions) for a vote to be valid.  
 GB votes can be held by email or other online method. Summaries of the GB meetings are distributed to the full Collaboration by the GB Chair or GB secretary. These summaries must include meeting attendance and the %records of the votes cast by all GB Members.
 results of any votes taken.
  It is the expectation that GB Members participate in the majority of meetings. If a GB Member fails to participate %(via meeting attendance or email) 
@@ -304,7 +304,7 @@ If no candidate agrees to stand for election, the terminating co-Spokesperson wi
 The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  If a Voting Member of the GB is elected to one of these positions, they must resign their GB seat prior to taking office as Chair, and this vacancy will be filled in the next GB election. 
 
 Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the EVC.   Self-nominations are accepted.
-After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election.
+After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position. 
 Each Voting Member votes for a single candidate for each  open  Chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
 
 If no candidate agrees to stand for election, the terminating Chair will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of their term and the additional months served by the terminating Chair to equal two years.
@@ -325,7 +325,7 @@ Each Voting Member votes for a single candidate for each vacant GB position.  % 
 %Each Voting Member may vote for up to 10 candidates, or fewer as mandated by the EVC.
 % of the total number of board members. 
 
-The election for the Postdoctoral Member of the GB follows the same procedure, with the exception that only Postdoctoral Members are eligible to vote. 
+The election for the Postdoctoral Member of the GB follows the same procedure, with the exception that only \textcolor{red}{Postdoctoral Members are eligible to both nominate and vote for candidates for this position.} 
 
 After the initial GB is established, it is to amend these bylaws to establish whether to have separate votes different categories of representation on the GB or to continue with a mixed election/appointed governing board model as described in Appendix~\ref{app:first_election}. It is the expectation that the GB be evolve to a fully elected body as the Collaboration matures.
 
@@ -348,9 +348,10 @@ Four of the organizational structures overseen by the Spokespersons have represe
 \subsection{Science Council and Analysis Working Groups}
 \label{sec:SC}
 
-The Science Council works closely with the Spokespersons to coordinate the key scientific objectives of the Collaboration.  The Science Council is led by two co-Chairs elected by the Voting Members of the Collaboration, who also serve as Members of the \exec.  The remaining Members of the Science Council are the co-coordinators of the various Analysis Working Groups. These Working Groups are open to all Collaboration Members, and will be formally established by the Spokespersons. 
+\textbf{The Science Council works closely with the Spokespersons to coordinate the key scientific objectives of the Collaboration}.  The Science Council is led by two co-Chairs elected by the Voting Members of the Collaboration, who also serve as Members of the \exec.   \textcolor{red}{The Science Council chairs serve with two-year terms and are limited to two consecutive terms with one year off required before standing again.}
+The remaining Members of the Science Council are the co-coordinators of the various Analysis Working Groups. These Working Groups are open to all Collaboration Members, and will be formally established by the Spokespersons.  
 
-The Science Council approves the projects that lead to publications and is responsible for maintaining a list of Key Science topics  (\S\ref{sec:pubprop}).
+The Science Council approves the projects that lead to publications and is responsible for maintaining a list of Key Science topics  (\S\ref{sec:pubprop}). \textcolor{red}{It is charged to work closely with the Co-Spokespersons and the Executive Team to ensure that the key science goals of the Collaboration are achieved.} 
 
 Each Analysis Working Group will have two co-coordinators who  serve for two-year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future.  The Science Council Chairs will solicit self-nominations for these co-coordinator positions. The Spokespersons will appoint coordinators with the advice of the Science Council Chairs, and will consider the distribution of early and late career Members when making these appointments. Coordinators will ordinarily not serve back-to-back terms.
 
@@ -659,7 +660,7 @@ Violations of the policy will be addressed by the Publication Board, which will 
 
 {\bf This section is drawn from the LSST DESC Code of Conduct} which is licensed under Creative Commons CC0 1.0 \url{https://creativecommons.org/publicdomain/zero/1.0/}
 
-CMB-S4 has two Ombudspersons who are available to members of the Collaboration. The role of the Ombudspersons is to provide informal, confidential, nonjudgmental, impartial, and independent advice and arrange mediation for CMB-S4 members for the purposes of dispute resolution. Confidentiality is a privilege of the Ombudspersons and the only circumstances that there may be an exception to confidentiality is if the Ombudsperson is concerned by an imminent risk of serious harm, or if required by law in the applicable jurisdiction to anonymously report credible evidence of fraud, waste, or abuse concerning the use of government funds. As such, communications with an Ombudsperson do not constitute formal notice to the Collaboration or the individual's institute. If the individual would like to start formal proceedings, the Ombudsperson can provide guidance on the CMB-S4 process and referrals for institutional processes. The CMB-S4 process for formal complaints is outlined in the CMB-S4 Code of Conduct Implementation section. There are two CMB-S4 Ombudspersons to provide a choice of whom to speak with, and to ensure that there is at least one Ombudsperson available at Collaboration meetings. The Ombudspersons are available to CMB-S4 members who are experiencing conflicts or disputes as part of their CMB-S4 activities. The Ombudspersons will work together with the members who consult them to identify options for managing and resolving disputes and conflicts. This includes providing advice and support, referring individuals to appropriate resources, organizing informal mediation, and ensuring that the CMB-S4 Spokesperson is made aware of any systemic issues in the Collaboration. The Ombudspersons term of 2 years, with the option of renewal. Due consideration will be given to the diversity of the candidates when the Ombusdspersons are selected. The Ombudspersons will be full members of CMB-S4, with a strong understanding of the organizational structure of the Collaboration. \textbf{They will not hold any other leadership positions within the Collaboration and will report only to the \shorte.} They must become members of the International Ombudsman Association and familiarize themselves with the extensive materials available on their website. \url{https://www.ombudsassociation.org}
+CMB-S4 has two Ombudspersons who are available to members of the Collaboration. The role of the Ombudspersons is to provide informal, confidential, nonjudgmental, impartial, and independent advice and arrange mediation for CMB-S4 members for the purposes of dispute resolution. Confidentiality is a privilege of the Ombudspersons and the only circumstances that there may be an exception to confidentiality is if the Ombudsperson is concerned by an imminent risk of serious harm, or if required by law in the applicable jurisdiction to anonymously report credible evidence of fraud, waste, or abuse concerning the use of government funds. As such, communications with an Ombudsperson do not constitute formal notice to the Collaboration or the individual's institute. If the individual would like to start formal proceedings, the Ombudsperson can provide guidance on the CMB-S4 process and referrals for institutional processes. The CMB-S4 process for formal complaints is  \textcolor{red}{to be outlined in a CMB-S4 Code of Conduct which will be determined following the formation of the Collaboration}. There are two CMB-S4 Ombudspersons to provide a choice of whom to speak with, and to ensure that there is at least one Ombudsperson available at Collaboration meetings. The Ombudspersons are available to CMB-S4 members who are experiencing conflicts or disputes as part of their CMB-S4 activities. The Ombudspersons will work together with the members who consult them to identify options for managing and resolving disputes and conflicts. This includes providing advice and support, referring individuals to appropriate resources, organizing informal mediation, and ensuring that the CMB-S4 Spokesperson is made aware of any systemic issues in the Collaboration. The Ombudspersons term of 2 years, with the option of renewal. Due consideration will be given to the diversity of the candidates when the Ombusdspersons are selected. The Ombudspersons will be full members of CMB-S4, with a strong understanding of the organizational structure of the Collaboration. \textbf{They will not hold any other leadership positions within the Collaboration and will report only to the \shorte.} They must become members of the International Ombudsman Association and familiarize themselves with the extensive materials available on their website. \url{https://www.ombudsassociation.org}
 
 CMB-S4  has chosen to adopt the role and function of the Ombudsperson as expressed by the International Ombudsman Association (with some additions and edits for gender neutrality):\url{https://www.ombudsassociation.org/Resources/Frequently-Asked-Questions/What-is-anOrganizational-Ombudsman}
 
@@ -715,9 +716,17 @@ These bylaws may be amended by the GB. A new bylaw or an amendment may be presen
 For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting.  
 
 The elected candidates begin to serve immediately after the elections are completed. The end of their terms is determined by adding the length of the nominal term for their positions (one, two or three years) to June 30, 2018. 
+\textcolor{red}{As is directed for elections once the Collaboration is established, the initial elections are timed to provide Collaboration Members multiple opportunities to participate in Collaboration governance. }
 
 \subsubsection{First Election of Co-spokespersons} 
 The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates. The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
+
+
+\subsection{First Election Council and Committee Chairs}
+\textcolor{red}{The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the EVC.   Self-nominations are accepted.
+After a nomination period, the IEVC will consult with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position. 
+Each Voting Member votes for a single candidate for each  open  Chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. }
+
 
 \subsubsection{First Election of the Governing Board}
 The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
