--- a/bylaws.tex
+++ b/bylaws.tex
@@ -578,7 +578,7 @@ For the purposes of authorship, ``Active Members'' consist of Senior, Postdoctor
   The Membership Board will provide the current list of eligible Active and Legacy Members to the Publication Board.
   {\color{red}
     \sout{Anyone who chooses to opt out of authorship for a given Key Project paper must  notify the Publication Board.}
-    In an email notification, these authors will be encouraged to confirm their authorship online.}
+    In an email notification, these members will be encouraged to join the author list by confirming their acceptance of authorship online.}
 \item For non-key project papers, the author list will be two-tiered.
 %  The first tier will typically consist of untenured (or equivalent) members of the project team, ordered according to their preference.  (The publication panel can allow exceptions for senior scientists in the first tier in rare cases when justified by their contribution.)
   Project teams may organize the first author tier as appropriate for the paper, and although not required, conventionally the tenured members of the project team will appear in the second, alphabetical tier of authors.
